UPDATE: Service configured

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AWS": {
+    "ParameterStore": {
+      "DbConnectionStringPath": "/TaskManager/DB_CONNECTION_STRING",
+      "DbNamePath": "/TaskManager/DB_NAME",
+      "SQSUrlPath": "/TaskManager/SQS_URL"
+    }
+  },
   "AllowedHosts": "*"
 }
