--- a/NotificationService.csproj
+++ b/NotificationService.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AWSSDK.Core" Version="3.7.400.21" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.301" />
     <PackageReference Include="AWSSDK.SimpleSystemsManagement" Version="3.7.402" />
+    <PackageReference Include="AWSSDK.SQS" Version="3.7.400.24" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6" />
     <PackageReference Include="MongoDB.Driver" Version="2.29.0" />
